@@ -125,6 +125,8 @@ typedef enum event_identifier
   EVENT_MONITOR_NOINPUT_ABORT     = 0x00000088,
   EVENT_OPENCL_SESSION_POST       = 0x00000090,
   EVENT_OPENCL_SESSION_PRE        = 0x00000091,
+  EVENT_OPENCL_DEVICE_INIT_POST   = 0x00000092,
+  EVENT_OPENCL_DEVICE_INIT_PRE    = 0x00000093,
   EVENT_OUTERLOOP_FINISHED        = 0x000000a0,
   EVENT_OUTERLOOP_MAINSCREEN      = 0x000000a1,
   EVENT_OUTERLOOP_STARTING        = 0x000000a2,
