@@ -57,6 +57,7 @@
 - Hardware Monitor: Renamed --gpu-temp-disable to --hwmon-disable
 - Memory: Limit maximum host memory to allocate depending on bitness
 - Memory: Reduced default maximum bitmap size from 24 to 18 and give a notice to use --bitmap-max to restore
+- Startup: Show OpenCL runtime initialization message (per device)
 - Tests: Added hash-mode 11700 (Streebog-256)
 - Tests: Added hash-mode 11750 (HMAC-Streebog-256 (key = $pass), big-endian)
 - Tests: Added hash-mode 11760 (HMAC-Streebog-256 (key = $salt), big-endian)
